static/css/hscroll.css
.scroll-container {
  overflow: hidden;
  position: relative;
  display: flex;
}

.hscroll {
  display: flex;
  padding: var(--size-1) 0 var(--size-3) 0;
  background: var(--max-visible-children);
}

.max-visible-children > * {
  width: auto;
  min-width: auto;
}

.max-visible-children > * img {
  width: calc(100vw / var(--max-visible-children));
  max-width: calc(100vw / var(--max-visible-children));
}

.hscroll > *:not(:last-child) {
  margin-right: var(--size-1);
}

.hscroll > *:not(:first-child) {
  margin-left: var(--size-1);
}

:root .scroller-button {
  background: var(--surface4);
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  width: 1rem;
  padding: 0;
  border-radius: 0;
  height: 2rem;
  font-size: 1rem;
  min-width: 2rem;
  opacity: 0.8;
}

:root .scroller-button:disabled {
  opacity: 0;
}

.scroller-button--left {
  left: 0;
  top: 50%;
}

.scroller-button--right {
  right: 0;
}

